<resources>
    <string name="app_name">Warehouse</string>
    <string name="logo">Gargour Logo</string>
    <string name="Register">Register</string>
    <string name="Unlock1">Unlock 1</string>
    <string name="Unlock2">Unlock 2</string>
    <string name="Hint_Reg">Registration code</string>
    <string name="cancel">Cancel</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome</string>
    <string name="receive">Receive</string>
    <string name="issue">Issue</string>
    <string name="transfer">Transfer</string>
    <string name="returns">Returns</string>
    <string name="settings">Settings</string>
    <string name="log_out">Logout</string>
    <string name="powered_by_gargour_technologies">Powered by gargour technologies</string>
    <string name="export">Export</string>
    <string name="warehouse">Warehouse</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_customer">Select Customer</string>
    <string name="select_supplier">Select Supplier</string>
    <string name="select_warehouse">Select Warehouse</string>
    <string name="orders">Orders</string>
    <string name="scan_items">Scan items</string>
    <string name="search_items">Search items</string>
    <string name="search">Search</string>
    <string name="orderNumb">Order %d</string>
    <string name="invalidCode">Invalid code</string>
    <string name="import_data">Import Data</string>
    <string name="export_data">Export data</string>
    <string name="imported">Imported</string>
    <string name="failed_to_import">Failed to import database</string>
    <string name="exported">Exported</string>
    <string name="failed_to_export">Failed to export database</string>
    <string name="main_to_warehouse_transfer">Main to warehouse</string>
    <string name="warehouse_to_main_transfer">Warehouse to main</string>
    <string name="customer_to_warehouse_return">Customer to warehouse</string>
    <string name="warehouse_to_supplier_return">Warehouse to supplier</string>
    <string name="select_destination">Select destination</string>
    <string name="modify">Modify</string>
    <string name="edit_quantity">Edit quantity</string>
    <string name="quantity">Quantity</string>
    <string name="no_data">No data</string>
    <string name="no_orders_found">No orders found</string>
    <string name="delete_data">Delete %s</string>
    <string name="delete">Delete</string>
    <string name="delete_assurance_message">Are you sure you want to delete this %s?</string>
    <string name="order">Order</string>
    <string name="failed_to_delete_order">Failed to delete item</string>
    <string name="item">Item</string>
    <string name="total_items">Total items</string>
    <string name="total_quantity">Total quantity</string>
    <string name="new_customer">New customer</string>
    <string name="new_supplier">New supplier</string>
    <string name="new_warehouse">New warehouse</string>
    <string name="code">Code</string>
    <string name="description">Description</string>
    <string name="create">create</string>
    <string name="missing">Missing</string>
    <string name="items">Items</string>
    <string name="destination">Destination</string>
    <string name="please_load_data">Please load data first</string>
    <string name="supplier">Supplier</string>
    <string name="customer">Customer</string>

</resources>