<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingHorizontal="8dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDelete"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:padding="16dp"
            android:text="@string/delete"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:backgroundTint="@color/progressError"
            app:elevation="20dp"
            app:layout_anchorGravity="bottom|center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tvMessage"
            app:layout_constraintTop_toBottomOf="@+id/tvMessage" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancel"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="0dp"
            android:text="@string/cancel"
            android:textAlignment="center"
            android:textSize="16sp"
            app:elevation="20dp"
            app:layout_anchorGravity="bottom|center"
            app:layout_constraintBottom_toBottomOf="@+id/btnDelete"
            app:layout_constraintStart_toStartOf="@+id/tvMessage"
            app:layout_constraintTop_toTopOf="@+id/btnDelete" />

        <TextView
            android:id="@+id/tvHeader"
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:textColor="?attr/colorOnSurface"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/delete_data" />

        <TextView
            android:id="@+id/tvMessage"
            style="@style/mainTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/quantity"
            android:textAlignment="viewStart"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:layout_constraintEnd_toEndOf="@+id/tvHeader"
            app:layout_constraintStart_toStartOf="@+id/tvHeader"
            app:layout_constraintTop_toBottomOf="@+id/tvHeader"
            tools:text="@string/delete_assurance_message" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>


