<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_gradient"
    tools:context=".view.destination.DestinationFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/back_gradient"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="@color/colorMainDark"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:title="@string/orders">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginStart="30dp"
                android:contentDescription="@string/logo"
                android:padding="40dp"
                android:src="@drawable/orders_list"
                app:layout_collapseMode="parallax" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Dark" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvOrders"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/scroll_content_background"
        android:padding="20dp"
        android:visibility="visible"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="bottom"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:itemCount="10"
        tools:listitem="@layout/layout_order" />

    <ImageView
        android:id="@+id/ivNoData"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/no_data"
        android:src="@drawable/ic_no_data"
        android:visibility="gone"
        app:layout_anchor="@id/rvOrders"
        app:layout_anchorGravity="center"
        app:tint="@android:color/darker_gray" />

    <TextView
        android:id="@+id/tvNoData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:gravity="center"
        android:textColor="@android:color/darker_gray"
        android:textSize="16sp"
        app:layout_anchor="@id/ivNoData"
        app:layout_anchorGravity="bottom|center"
        tools:text="No data available yet" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:layout_anchor="@id/rvOrders"
        app:layout_anchorGravity="center" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnNewOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:contentDescription="@string/export"
        app:backgroundTint="@color/fab_color"
        app:elevation="10dp"
        app:fabSize="normal"
        app:layout_anchor="@id/rvOrders"
        app:layout_anchorGravity="bottom|end"
        app:srcCompat="@drawable/ic_add"
        app:tint="@color/white" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>